--- a/src/apps/projects/index.html
+++ b/src/apps/projects/index.html
@@ -24,7 +24,59 @@ body{font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif; bac
 .grid2{ margin:8px 0 14px; padding: 16px var(--outer-pad) var(--outer-pad); display:grid; gap: var(--gap); grid-template-columns: repeat(2, minmax(400px, 1fr)); align-items:start; }
 .grid2 .box{ width: 100% !important; aspect-ratio: 1 / 1 !important; height:auto !important; min-height:400px; }
 .grid2 .row-resize, .grid2 .col-resize{ display:none !important; }
-@media (max-width: 900px){ .box{ min-height: 50vh; } .box .row-resize{ height: 10px; } }
+/* Mobile responsive improvements */
+@media (max-width: 900px){
+  :root { --outer-pad: 16px; } /* Reduce padding on mobile */
+  
+  .header { padding: 12px var(--outer-pad); }
+  .toolbar { padding: 12px var(--outer-pad); flex-wrap: wrap; }
+  
+  .box { min-height: 50vh; }
+  .box .row-resize { height: 12px; } /* Larger touch target */
+  .box .col-resize { width: 12px; height: 64px; } /* Larger touch target */
+  
+  .grid2 {
+    grid-template-columns: 1fr; /* Single column on mobile */
+    gap: 20px;
+  }
+  
+  .grid2 .box {
+    min-height: 40vh; /* Smaller minimum height */
+  }
+  
+  .toolbar label {
+    font-size: 14px;
+  }
+  
+  .toolbar input[type="range"] {
+    width: 100px;
+  }
+}
+
+@media (max-width: 600px){
+  :root { --outer-pad: 12px; }
+  
+  .h1 { font-size: clamp(18px, 5vw, 28px); }
+  
+  .toolbar {
+    gap: 8px;
+  }
+  
+  .toolbar .rebtn {
+    padding: 4px 8px;
+    font-size: 12px;
+  }
+  
+  .box header {
+    padding: 8px 12px;
+    font-size: 14px;
+  }
+  
+  .box header .controls a.dl {
+    padding: 4px 6px;
+    font-size: 10px;
+  }
+}
 .box{ position:relative; display:flex; flex-direction:column; border-radius:16px; background:#ffffff06; border:1px solid #ffffff14; box-shadow:0 12px 30px rgba(0,0,0,.38); overflow:hidden; width: var(--w, 400px); max-width: 100%; aspect-ratio: 1 / 1; }
 .box[data-free="1"]{ aspect-ratio: auto; height: var(--h, 360px); }
 .box header{ position:relative; display:flex; align-items:center; justify-content:space-between; gap:10px; padding:10px 36px; font-weight:700; color:#cfe9ff; border-bottom:1px solid #ffffff14; background:linear-gradient(180deg, rgba(12,18,32,.7), rgba(10,15,24,.6)); }
