Complete 10-step codebase optimization
- Fix all 'Back to Portal' links to point to new main portal (src/index.html)
- Archive redirect stub pages (gallery, projects, about subdirs)
- Update navigation links throughout site
- Archive duplicate JS files, keeping TypeScript versions
- Update vite.config.ts with correct entry points
- Update README.md with current structure and navigation flow
- Consolidate all changes for clean, maintainable codebase

--- a/src/about.html
+++ b/src/about.html
@@ -516,7 +516,7 @@
   <!-- HEADER -->
   <header class="errl-header">
     <nav class="errl-nav">
-      <a class="errl-home-btn" href="./portal/pixi-gl/index.html">
+      <a class="errl-home-btn" href="./index.html">
         <span class="chevron">◀</span>
         <span>Back to Portal</span>
       </a>
@@ -528,12 +528,12 @@
           </a>
         </li>
         <li>
-          <a class="errl-bubble-btn" href="./apps/gallery/index.html">
-            <span>Art Gallery</span>
+          <a class="errl-bubble-btn" href="./apps/index.html">
+            <span>Gallery</span>
           </a>
         </li>
         <li>
-          <a class="errl-bubble-btn" href="./apps/projects/index.html">
+          <a class="errl-bubble-btn" href="./apps/index.html">
             <span>Projects</span>
           </a>
         </li>
