--- a/src/apps/dev/index.html
+++ b/src/apps/dev/index.html
@@ -163,7 +163,7 @@
   <script>
     (function(){
       const params = new URLSearchParams(location.search);
-      const target = params.get('target') || '../../portal/pixi-gl/index.html';
+      const target = params.get('target') || '../../index.html';
       const targetUrl = new URL(target, location.href);
 
       const $ = (id)=> document.getElementById(id);
