--- a/src/apps/pin-designer/index.html
+++ b/src/apps/pin-designer/index.html
@@ -311,7 +311,7 @@
 <body class="dense">
 <header class="errl-header">
   <div class="errl-header-content">
-    <a class="errl-home-btn" href="../../portal/pixi-gl/index.html">← Back to Portal</a>
+    <a class="errl-home-btn" href="../../index.html">← Back to Portal</a>
     
     <nav class="errl-nav">
       <a class="errl-bubble-btn" href="../../../about.html">About Errl</a>
