--- a/src/index.html
+++ b/src/index.html
@@ -47,9 +47,9 @@
 
     <!-- Orbiting nav bubbles (5 options) -->
     <div id="navOrbit" class="nav-orbit">
-      <a class="bubble menuOrb" data-angle="210" data-dist="180" href="./apps/about/index.html">About Errl</a>
-      <a class="bubble menuOrb" data-angle="320" data-dist="160" href="./apps/gallery/index.html">Art Gallery</a>
-      <a class="bubble menuOrb" data-angle="20"  data-dist="200" href="./apps/projects/index.html">Projects</a>
+      <a class="bubble menuOrb" data-angle="210" data-dist="180" href="./about.html">About Errl</a>
+      <a class="bubble menuOrb" data-angle="320" data-dist="160" href="./apps/index.html">Gallery</a>
+      <a class="bubble menuOrb" data-angle="20"  data-dist="200" href="./apps/index.html">Projects</a>
       <a class="bubble menuOrb" data-angle="75"  data-dist="150" href="./apps/tools/index.html">Tools</a>
       <a class="bubble menuOrb" data-angle="140" data-dist="170" href="./apps/pin-designer/index.html">Pin Designer</a>
     </div>
