--- a/src/apps/tools/index.html
+++ b/src/apps/tools/index.html
@@ -342,7 +342,7 @@ body{font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif; bac
 <body>
   <header class="errl-header">
     <div class="errl-header-content">
-      <a class="errl-home-btn" href="../../portal/pixi-gl/index.html">← Back to Portal</a>
+      <a class="errl-home-btn" href="../../index.html">← Back to Portal</a>
       
       <nav class="errl-nav">
         <a class="errl-bubble-btn" href="../../../about.html">About Errl</a>
