Fix: Restore gallery and projects directories with correct links
These weren't just redirect stubs - they contain manifest.json files and actual project content (coin variants). Restored them and fixed navigation links.

--- a/src/about.html
+++ b/src/about.html
@@ -528,12 +528,12 @@
           </a>
         </li>
         <li>
-          <a class="errl-bubble-btn" href="./apps/index.html">
-            <span>Gallery</span>
+          <a class="errl-bubble-btn" href="./apps/gallery/index.html">
+            <span>Art Gallery</span>
           </a>
         </li>
         <li>
-          <a class="errl-bubble-btn" href="./apps/index.html">
+          <a class="errl-bubble-btn" href="./apps/projects/index.html">
             <span>Projects</span>
           </a>
         </li>
