feat: upgrade Errl Studio Pro to v3.4 with enhanced tooling and build system

--- a/src/index.html
+++ b/src/index.html
@@ -354,7 +354,7 @@
   <script type="module" src="./fx/hue-filter.ts"></script>
   <script type="module" src="./fx/hue-controller.ts"></script>
   <script type="module" src="./webgl.js"></script>
-  <script type="module" src="./app.js"></script>
+  <script type="module" src="./portal/app-legacy.js"></script>
   <script type="module" src="./errl-battle.js"></script>
 
   <!-- Secondary phone overlay: Colorizer -->
