--- a/src/portal/pages/tools/index.html
+++ b/src/portal/pages/tools/index.html
@@ -63,8 +63,17 @@ body{font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif; bac
   <main class="main">
     <section class="hero">
       <h1>Errl's Studio</h1>
-      <p>Experiments, tools, and live prototypes live here. We’ll be pulling in more apps soon.</p>
+      <p>Experiments, tools, and live prototypes live here. We'll be pulling in more apps soon.</p>
       <p style="opacity:.75">Color Customizer and Pin Widget are under Projects for now.</p>
+    </section>
+    <section style="margin-top: 2rem; padding: 1.5rem; background: rgba(255,255,255,0.03); border-radius: 12px; border: 1px solid rgba(255,255,255,0.1);">
+      <h2 style="margin-top: 0; font-size: 1.5rem;">Tools & Experiments</h2>
+      <div style="display: grid; gap: 1rem; margin-top: 1rem;">
+        <a href="math-lab/index.html" style="display: block; padding: 1rem 1.5rem; background: rgba(86,194,255,0.1); border: 1px solid rgba(86,194,255,0.3); border-radius: 8px; text-decoration: none; color: var(--ink); transition: all 0.2s;">
+          <h3 style="margin: 0 0 0.5rem 0; color: #56c2ff;">Psychedelic Math Lab</h3>
+          <p style="margin: 0; opacity: 0.8; font-size: 0.9rem;">100 interactive mathematical toys and visual effects. Explore reaction-diffusion, supershapes, domain coloring, and more.</p>
+        </a>
+      </div>
     </section>
   </main>
   <script type="module" src="../../../fx/errl-bg.ts"></script>
