--- a/src/index.html
+++ b/src/index.html
@@ -294,18 +294,11 @@
       </div>
       <div class="sectionDivider"></div>
       <div class="sliderRow" style="justify-content:center; gap:10px; align-items:flex-start; flex-wrap:wrap">
-        <button id="hueAnimate" class="btn-animate">Animate</button>
-        <div style="display:flex; flex-direction:column; gap:2px; align-items:flex-start">
-          <span style="font-size:9px; opacity:.75;">Mode</span>
-          <div style="display:flex; gap:4px">
-            <button id="hueModeLoop" class="mini-bump" title="Loop">⟲</button>
-            <button id="hueModePing" class="mini-bump" title="Ping-Pong">↔︎</button>
-          </div>
+        <div style="display:flex; flex-direction:column; gap:2px; align-items:flex-start; min-width:200px;">
+          <span style="font-size:9px; opacity:.75;">Timeline</span>
+          <input id="hueTimeline" type="range" min="0" max="360" step="1" value="0" title="Global hue timeline">
         </div>
-        <div style="display:flex; flex-direction:column; gap:2px; align-items:flex-start">
-          <span style="font-size:9px; opacity:.75;">Speed</span>
-          <input id="hueAnimSpeed" class="speed-number" type="number" min="0.02" max="2.5" step="0.05" value="0.30" title="Animation Speed">
-        </div>
+        <button id="huePlayPause" class="btn-animate" title="Play/Pause">Play/Pause</button>
       </div>
     </div>
 
