Effects: swap vignette label order; remove GL Bubbles animate controls; replace ripple-click with GL burst when Ripples is off; rainbow GL burst; wire accessibility toggles (Reduced Motion slows to creep, High Contrast boosts contrast, Invert colors); adjust high-contrast filter.

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
       <a class="bubble menuOrb" data-angle="210" data-dist="180" href="./portal/pages/about/index.html"><span class="label">About</span></a>
       <a class="bubble menuOrb" data-angle="320" data-dist="160" href="./portal/pages/gallery/index.html"><span class="label">Gallery</span></a>
       <a class="bubble menuOrb" data-angle="20"  data-dist="200" href="./portal/pages/projects/index.html"><span class="label">Projects</span></a>
-      <a class="bubble menuOrb" data-angle="75"  data-dist="150" href="./portal/pages/tools/index.html"><span class="label">Studio</span></a>
+      <a class="bubble menuOrb" data-angle="75"  data-dist="150" href="./studio.html"><span class="label">Studio</span></a>
       <a class="bubble menuOrb" data-angle="140" data-dist="170" href="./portal/pages/pin-designer/index.html"><span class="label">Designer</span></a>
     </div>
   </div>
