docs: add branch divergence analysis and merge strategy with next steps
- Document divergence between working branch and main
- Analyze 190 file diff: main missing safety system, has Math Lab
- Recommend merge strategy to preserve our work + integrate Math Lab
- Provide complete merge checklist with conflict resolution guide
- Decision: Keep studio naming, move Math Lab to studio/math-lab
- Estimated time: ~1 hour for full integration

--- a/src/portal/pages/pin-designer/index.html
+++ b/src/portal/pages/pin-designer/index.html
@@ -315,7 +315,7 @@
   .panel-toggle{display:none}
   @media(max-width:900px){.panel-toggle{display:inline-block} .panel[hidden]{display:none !important}}
 </style>
-<link rel="stylesheet" href="../../fx/errl-bg.css">
+<link rel="stylesheet" href="../../../fx/errl-bg.css">
 </head>
 <body class="dense">
 <header class="errl-header">
