--- a/src/portal/pages/studio/svg-colorer/index.html
+++ b/src/portal/pages/studio/svg-colorer/index.html
@@ -174,6 +174,6 @@
   <div id="colorPopover" class="popover" hidden></div>
   <div id="palettePopover" class="popover" hidden></div>
 
-  <script src="app.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
